@@ -9,28 +9,68 @@ import net.minestom.server.network.packet.server.ServerPacketIdentifier;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.EnumSet;
-import java.util.List;
 import java.util.UUID;
+import java.util.*;
 
 import static net.minestom.server.network.NetworkBuffer.*;
 
-public record PlayerInfoUpdatePacket(@NotNull EnumSet<@NotNull Action> actions,
-                                     @NotNull List<@NotNull Entry> entries) implements ServerPacket {
+// Wagasa start recordからclassに変更
+public final class PlayerInfoUpdatePacket implements ServerPacket {
+    private final @NotNull EnumSet<@NotNull Action> actions;
+    private final @NotNull List<@NotNull Entry> entries;
+
+    public PlayerInfoUpdatePacket(@NotNull EnumSet<@NotNull Action> actions, @NotNull List<@NotNull Entry> entries) {
+        this.actions = EnumSet.copyOf(actions);
+        this.entries = List.copyOf(entries);
+    }
+
     public PlayerInfoUpdatePacket(@NotNull Action action, @NotNull Entry entry) {
         this(EnumSet.of(action), List.of(entry));
     }
 
-    public PlayerInfoUpdatePacket {
-        actions = EnumSet.copyOf(actions);
-        entries = List.copyOf(entries);
+    public PlayerInfoUpdatePacket(@NotNull NetworkBuffer reader) {
+        this.actions = reader.readEnumSet(Action.class);
+        this.entries = reader.readCollection(buf -> {
+            final var uuid = buf.read(UUID);
+            String username = null;
+            List<Property> properties = Collections.emptyList();
+            boolean listed = false;
+            int latency = 0;
+            GameMode gameMode = GameMode.SURVIVAL;
+            Component displayName = null;
+            ChatSession chatSession = null;
+            for (Action action : this.actions) {
+                switch (action) {
+                    case ADD_PLAYER -> {
+                        username = reader.read(STRING);
+                        properties = reader.readCollection(Property::new);
+                    }
+                    case INITIALIZE_CHAT -> {
+                        chatSession = reader.readOptional(ChatSession::new);
+                    }
+                    case UPDATE_GAME_MODE -> {
+                        gameMode = reader.readEnum(GameMode.class);
+                    }
+                    case UPDATE_LISTED -> {
+                        listed = reader.read(BOOLEAN);
+                    }
+                    case UPDATE_LATENCY -> {
+                        latency = reader.read(VAR_INT);
+                    }
+                    case UPDATE_DISPLAY_NAME -> {
+                        displayName = reader.readOptional(COMPONENT);
+                    }
+                }
+            }
+            return new Entry(uuid, username, properties, listed, latency, gameMode, displayName, chatSession);
+        });
     }
 
     @Override
     public void write(@NotNull NetworkBuffer writer) {
         writer.writeEnumSet(actions, Action.class);
         writer.writeCollection(entries, (buffer, entry) -> {
-            buffer.write(NetworkBuffer.UUID, entry.uuid);
+            buffer.write(UUID, entry.uuid);
             for (Action action : actions) {
                 action.writer.write(buffer, entry);
             }
@@ -42,6 +82,36 @@ public record PlayerInfoUpdatePacket(@NotNull EnumSet<@NotNull Action> actions,
         return ServerPacketIdentifier.PLAYER_INFO_UPDATE;
     }
 
+    public @NotNull EnumSet<@NotNull Action> actions() {
+        return actions;
+    }
+
+    public @NotNull List<@NotNull Entry> entries() {
+        return entries;
+    }
+
+    @Override
+    public boolean equals(Object obj) {
+        if (obj == this) return true;
+        if (obj == null || obj.getClass() != this.getClass()) return false;
+        var that = (PlayerInfoUpdatePacket) obj;
+        return Objects.equals(this.actions, that.actions) &&
+                Objects.equals(this.entries, that.entries);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(actions, entries);
+    }
+
+    @Override
+    public String toString() {
+        return "PlayerInfoUpdatePacket[" +
+                "actions=" + actions + ", " +
+                "entries=" + entries + ']';
+    }
+
+
     public record Entry(UUID uuid, String username, List<Property> properties,
                         boolean listed, int latency, GameMode gameMode,
                         @Nullable Component displayName, @Nullable ChatSession chatSession) {
@@ -51,7 +121,7 @@ public record PlayerInfoUpdatePacket(@NotNull EnumSet<@NotNull Action> actions,
     }
 
     public record Property(@NotNull String name, @NotNull String value,
-                           @Nullable String signature) implements NetworkBuffer.Writer {
+                           @Nullable String signature) implements Writer {
         public Property(@NotNull String name, @NotNull String value) {
             this(name, value, null);
         }
@@ -91,3 +161,4 @@ public record PlayerInfoUpdatePacket(@NotNull EnumSet<@NotNull Action> actions,
         }
     }
 }
+// Wagasa end
